# projects

./: README.md
EM_parallel/.svn/: entries
EM_parallel/src/: CMakeLists.txt  Hdf5ParallelWrite.c  Hdf5SerialRead.c  Hdf5SerialWrite.c  ParallelBeamEM.cpp  ParallelBeamEM.h  backproj_cal.cu  io.cpp  len_weight_cal.cu  nr3.h  proj_cal.cu  reduction.cu  tv3d_cal.cu
EM_parallel/src/CMake/cuda/.svn/: entries
Tomo2DataExchange/.svn/: entries
Tomo2DataExchange/src/Tomo2DataExchange_v1/: Makefile  Makefile~
Tomo2DataExchange/src/Tomo2DataExchange_v1/include/.svn/: all-wcprops  entries
Tomo2DataExchange/src/Tomo2DataExchange_v1/main/: Tomo2DataExchange  Tomo2DataExchange.cpp  main.mk
Tomo2DataExchange/src/Tomo2DataExchange_v1/main/.svn/text-base/: ExampleUsage.cpp.svn-base  main.mk.svn-base
Tomo2DataExchange/src/Tomo2DataExchange_v1/nexus_lib/.svn/: entries
Tomo2DataExchange/src/Tomo2DataExchange_v1/nexus_lib/.svn/text-base/: nexusgroup.cpp.svn-base
Tomo2DataExchange/src/Tomo2DataExchange_v1/workspace/utility/: Makefile  Makefile~  errorlogclass.h  logfileclass.cpp
Tomo2DataExchange/src/Tomo2DataExchange_v2/: CMakeLists.txt
Tomo2DataExchange/src/Tomo2DataExchange_v2/.svn/: entries
Tomo2DataExchange/src/Tomo2DataExchange_v2/main/: CMakeLists.txt
Tomo2DataExchange/src/Tomo2DataExchange_v2/main/.svn/: entries
Tomo2DataExchange/src/Tomo2DataExchange_v2/nexus_lib/: CMakeLists.txt  nexusattribute.cpp  nexusbox.cpp  nexusbox.h  nexusdata.cpp  nexusfield.cpp
Tomo2DataExchange/src/Tomo2DataExchange_v2/nexus_lib/.svn/text-base/: libnexuslibrary.a.svn-base
Tomo2DataExchange/src/Tomo2DataExchange_v2/workspace/utility/: linkedlistclass.h  logfileclass.h
add_metadata/: add_dataExchange_entries.py  add_dataExchange_entries_auto.py  beamline_status.py  print_PV.py  process_variable.py  process_variables.py  process_variables_2BM.py  process_variables_32ID.py  schedule.py
add_theta/: add_theta_32ID.py
alignment/: .gitignore  Im_align_tests.py  README.txt  align_rot.py  align_rot_microCT.py  imreg.py  imreg_demo.py  imreg_tomo.py  plot_matching.py
alignment/workingOn/: crosscorr_fun.py
area_detector/: ad.py
data_management/: data_management.py  globus.ini  globus.py  globus_cli.py  globus_copy_share.py  globus_share.ini  globus_share.py
find_shift/.svn/: entries
find_shift/src/: CMakeLists.txt  find_shift_config.h.in
find_shift/src/main/: CMakeLists.txt  cross_correlation.cu  fft.h  fft_fftw.c  find_shift.cpp  find_shift_hdf4.cpp  gridrec.cu  gridrec.h  recon_algorithm.cpp  recon_algorithm.h
find_shift/src/main/.svn/: all-wcprops
find_shift/src/main/.svn/text-base/: ExampleUsage.svn-base
find_shift/src/nexus_lib/: nexusapi.cpp  nexusapi.h
find_shift/src/nexus_lib/.svn/: all-wcprops
find_shift/src/nexus_lib/.svn/text-base/: nexus_lib.mk.svn-base  nexusapi.cpp.svn-base
find_shift/src/workspace/utility/: CMakeLists.txt  linkedlistclass.cpp
gridrec/BorlandC/: grid.cpp  grid_math.cpp
gridrec/GPU/: CMakeLists.txt  CMakeLists_backup.txt  Hdf5ParallelRead.c  Hdf5ParallelWrite.c  Hdf5SerialRead.c  Hdf5SerialWrite.c  backproj_cal.cu  fbp.cu  fft_nr.cpp  filteredbackprojection.cpp  filteredbackprojection.h  gridrec.cu  gridrec.h  gridrec_gpu.cu  gridrec_gpu.h  gridrec_gpu_phase2.cu  gridrec_gpu_phase2.h  io.h  itkGenerateProjection2DImageFilter.h  proj_cal.cu  reduction.cu  tomo_recon.cpp  tomo_recon.h  tomo_recon_config.h.in
gridrec/GPU/CMake/cuda/: FindCuda.cmake
gridrec/GPU/CMake/cuda/.svn/: entries
gridrec/GPU/doc/: Note  NoteGPU
gridrec/GridrecCPP/BNL version/gridrec/: grid.h
gridrec/GridrecCPP/BNL version/phase/: PMIStoCDF.h  PXLtoCDF.h  libhead.h  local.h
gridrec/GridrecCPP/BorlandC/: grid.h
gridrec/GridrecCPP/Gridrec4.9/: Multitomo_unit.txt  grid.cpp  grid.h  grid.~cpp
gridrec/GridrecCPP/Gridrec5.0/: fftgr.~cpp  filters.cpp  filters.~cpp  grid.~cpp  grid.~h  grid_math.~cpp  pswf.cpp
gridrec/GridrecCPP/Gridrec5.1/: grid_io.cpp
gridrec/GridrecCPP/Gridrec5.2/: fftgr.cpp  goptst.cpp  netcdf.h
hdf5_extract/.svn/: entries
hdf5_extract/src/: CMakeLists.txt  Hdf5SerialRead.c  Hdf5SerialWrite.c  hdf5_extract.cpp
phase_contrast/src/: CMakeLists.txt  phase_contrast_config.h.in
phase_contrast/src/CMake/cuda/.svn/: entries
phase_contrast/src/main/: CMakeLists.txt  Hdf5SerialRead.c  ankaphase.cpp  ankaphase_hdf4.cpp  freq_mul.cu
phase_contrast/src/nexus_lib/: nexusexceptionclass.cpp  nexusexceptionclass.h  nexusgroup.h
phase_contrast/src/workspace/utility/: errorlogclass.cpp
ring_removal/: demo.py  filter.py  imagesc.py  ring.py  ring_removal.py
